# PSTU-CPP

./: .gitignore  BLANK_README.md  CMakeLists.txt  README.md
sem1/s1p1/: CMakeLists.txt  main.cpp
sem1/s1p10/: CMakeLists.txt  main.cpp
sem1/s1p11/: CMakeLists.txt  main.cpp
sem1/s1p2/: CMakeLists.txt  main.cpp
sem1/s1p3/: CMakeLists.txt  main.cpp
sem1/s1p4/: CMakeLists.txt  main.cpp
sem1/s1p5/: CMakeLists.txt  main.cpp
sem1/s1p6/: CMakeLists.txt  main.cpp
sem1/s1p7/: main.cpp
sem1/s1p7v1/: CMakeLists.txt  main.cpp
sem1/s1p7v2/: CMakeLists.txt  main.cpp
sem1/s1p8/: CMakeLists.txt  main.cpp
sem1/s1p9/: CMakeLists.txt  F1.txt  main.cpp
sem2/: Exercises.7z
sem2/s2p1/: CMakeLists.txt  README.md  main.cpp  point.cpp  point.h
sem2/s2p10/: CMakeLists.txt  Money.cpp  Money.h  README.md  file_work.h  main.cpp
sem2/s2p11/: CMakeLists.txt  README.md  main.cpp
sem2/s2p12/: CMakeLists.txt  README.md
sem2/s2p13/: CMakeLists.txt  README.md  main.cpp
sem2/s2p2/: CMakeLists.txt  Employee.cpp  Employee.h  README.md  main.cpp
sem2/s2p3/: CMakeLists.txt  Money.cpp  Money.h  README.md  main.cpp  money.cpp  money.h
sem2/s2p4/: CMakeLists.txt  README.md  Triad.cpp  Triad.h  main.cpp  mytime.cpp  mytime.h  report.md  triad.cpp  triad.h
sem2/s2p5/: CMakeLists.txt  Object.cpp  Object.h  README.md  Triad.cpp  Triad.h  Vector.cpp  Vector.h  main.cpp  mytime.cpp  mytime.h
sem2/s2p6/: Array.cpp  Array.h  CMakeLists.txt  README.md  main.cpp
sem2/s2p7/: Array7.h  CMakeLists.txt  Money.cpp  Money.h  README.md  main.cpp
sem2/s2p8/: BOOK.cpp  BOOK.h  DIALOG.h  (+11 more)
(+37 files in other folders)
