cmake_minimum_required(VERSION 3.0.0)

project(PSTU-CPP VERSION 0.1.0)

add_subdirectory(sem1/s1p1)
add_subdirectory(sem1/s1p2)
add_subdirectory(sem1/s1p3)
add_subdirectory(sem1/s1p4)
add_subdirectory(sem1/s1p5)
add_subdirectory(sem1/s1p6)
add_subdirectory(sem1/s1p7v1)
add_subdirectory(sem1/s1p7v2)
add_subdirectory(sem1/s1p8)
add_subdirectory(sem1/s1p9)
add_subdirectory(sem1/s1p10)
add_subdirectory(sem1/s1p11)

add_subdirectory(sem2/s2p1)
add_subdirectory(sem2/s2p2)
add_subdirectory(sem2/s2p3)
add_subdirectory(sem2/s2p4)
add_subdirectory(sem2/s2p5)
add_subdirectory(sem2/s2p6)
add_subdirectory(sem2/s2p7)
add_subdirectory(sem2/s2p8)
add_subdirectory(sem2/s2p9)